--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,23 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Server</title>
+
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script>
 </head>
 <body>
-  <h1>Hello world</h1>
+  <h1>Products</h1>
+
+  <table>
+    <thead>
+    <th>&nbsp;</th>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Description</th>
+    </thead>
+    <tbody id="products">
+
+    </tbody>
+  </table>
+  <script src="bundle.js"></script>
 </body>
 </html>
